syntax = "proto3";

package edu.usfca.protobuf;

// Each mobile device uses either Android or iOS.
enum OsType {
    UNKNOWN_OS_TYPE = 0;
    ANDROID = 1;
    IOS = 2;
}

// Device Id uniquely identifies a mobile device.
// It has $os (Ostype) and either uuid or webid (string), but not both.
message DeviceId {
    OsType os = 1;

    // Note this "oneof" keyword.
    oneof id {
        string uuid = 2;
        string webid = 3;
    }
}
